# shotgun

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  default.nix  shell.nix  shotgun.man
.github/: FUNDING.yml
.github/workflows/: rust.yml
docs/: shotgun.1
nix/: default.nix  pkgs.nix  shotgun.nix  sources.json
src/: error.rs  lib.rs  main.rs  util.rs  xwrap.rs
