[package]
name = "shotgun"
description = "Minimal X screenshot utility"
version = "2.3.1"
authors = ["novenary <streetwalkermc@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/neXromancers/shotgun"
build = "build.rs"
edition = "2018"

[dependencies]
getopts = "0.2"
libc = "0.2"
num-traits = "0.2"

[dependencies.image]
default-features = false
version = "0.23"
features = ["png", "pnm"]

[dependencies.x11]
version = "2.18"
features = ["xlib", "xrandr"]
