[package]
name = "shotgun"
description = "Minimal X screenshot utility"
version = "2.4.0"
authors = ["novenary <streetwalkermc@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/neXromancers/shotgun"
build = "build.rs"
edition = "2018"

[dependencies]
getopts = "0.2"
num-traits = "0.2"

[dependencies.image]
default-features = false
version = "0.24.6"
features = ["png", "pnm"]

[dependencies.x11]
version = "2.21.0"
features = ["xlib"]

[dependencies.x11rb]
version = "0.11.1"
features = ["randr"]
