[package]
name = "shotgun"
description = "Minimal X screenshot utility"
version = "2.5.1"
authors = ["novenary <streetwalkermc@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/neXromancers/shotgun"
build = "build.rs"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release {{version}}"

[dependencies]
getopts = "0.2"
num-traits = "0.2"
nom = "7.1.3"

[dependencies.image]
default-features = false
version = "0.24.6"
features = ["png", "pnm"]

[dependencies.x11rb]
version = "0.11.1"
features = ["randr"]
